--- a/CURDPractice_CA.UI/Properties/launchSettings.json
+++ b/CURDPractice_CA.UI/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5194",
+      "applicationUrl": "https://localhost:5194",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
